# insider-trading-detection

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  requirements.txt
config/: config.yaml
cpp/: feature_processor.hpp  insider_detector.hpp  main.cpp
src/api/: main.py
src/features/: feature_engineering.py
src/training/: train.py
